--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Lateef Engagement",
   "icons": [
     {
-      "src": ".assets/images/favicon.ico",
+      "src": "./assets/images/favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
@@ -13,7 +13,7 @@
       "sizes": "192x192"
     },
     {
-      "src": ".assets/images/logo512.png",
+      "src": "./assets/images/logo512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
